fix z-index and some fix bugs from layout

--- a/task_11/css/style.css
+++ b/task_11/css/style.css
@@ -282,11 +282,7 @@ main {
 	cursor: pointer;
 }
 
-.first_label {
-	margin-right: 20px;
-}
-
-.second_label {
+.label {
 	margin-right: 20px;
 }
 
@@ -479,7 +475,7 @@ main {
 	margin-top: 12px;
 }
 
-.img_trash, .img_trash_2 {
+.img_trash, .img_trash {
 	width:  12px;
 	height: 12px;
 }
